fixed dark mode pie colors

--- a/src/frontend-admin/src/components/reusables/PieChart/PieChart.module.css
+++ b/src/frontend-admin/src/components/reusables/PieChart/PieChart.module.css
@@ -63,6 +63,11 @@
     top: 80px;
     left: 50px;
 }
+
+.darkModeCircle{
+background: #888;
+}
+
 .emptyDataText {
     color: black;
     font-size: 18px;
